@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfdesktop-4.5.92.tar.bz2 3098257 RMD160 44dc97f747bb1d986b63c3d66b19fc49047ba567 SHA1 733617ac126669526cc7c89534203d34c17ee745 SHA256 3802a71048fb24ee688bdbbedcc1c96b05ce57b737a6a442ae31c1805e18e91a
 DIST xfdesktop-4.5.93.tar.bz2 3099809 RMD160 cceb2ad71f9d064800857b31df174ee5f5162720 SHA1 dd29a87e2a6877b24180328fb004cbfebf95495f SHA256 da14b5b2e29bcee2019bf2214a8380e9f0e9be90b4088facdaae98fa2c6506ec
+DIST xfdesktop-4.5.99.1.tar.bz2 3061682 RMD160 e4a0a1503bfd6cbc74270710eb14a87359a224dc SHA1 f372c67566b465519c2b6069b9705e15a59952d9 SHA256 e6da9cc79a36b57b2acd7d17a9586b332efd6e5ee8cce5e85554284503c38cf6
 EBUILD xfdesktop-4.5.92.ebuild 1828 RMD160 78fce6699822fdb49b01bf95da1564ff9154268d SHA1 ffb7794e5f38028a8a2406a717844684fb06eabe SHA256 6169f702f0f76961e4cf9279f6271f290195bfd868dfa02df5da3c500c90834d
 EBUILD xfdesktop-4.5.93.ebuild 1828 RMD160 78fce6699822fdb49b01bf95da1564ff9154268d SHA1 ffb7794e5f38028a8a2406a717844684fb06eabe SHA256 6169f702f0f76961e4cf9279f6271f290195bfd868dfa02df5da3c500c90834d
+EBUILD xfdesktop-4.5.99.1.ebuild 1828 RMD160 78fce6699822fdb49b01bf95da1564ff9154268d SHA1 ffb7794e5f38028a8a2406a717844684fb06eabe SHA256 6169f702f0f76961e4cf9279f6271f290195bfd868dfa02df5da3c500c90834d
 EBUILD xfdesktop-9999.ebuild 1828 RMD160 78fce6699822fdb49b01bf95da1564ff9154268d SHA1 ffb7794e5f38028a8a2406a717844684fb06eabe SHA256 6169f702f0f76961e4cf9279f6271f290195bfd868dfa02df5da3c500c90834d
-MISC ChangeLog 1973 RMD160 bc6c8528d45e969fed40c8e39fa34e43b1a209b2 SHA1 ae052a0e15f4e8da5710aee4fca827a6d5483c8b SHA256 929afbc7395c0977cf0e6cf48fb2224e79fe74555c70b845a718d38222e4b93c
+MISC ChangeLog 2106 RMD160 a26b93c4ee8a56e528502badf9fb4f0f698dc611 SHA1 f0a9ab97ac1423c69aa9266c824b17da6472d27f SHA256 860b06be219bbe68414b813823caf5317018f6146f4ffcc5ffb46e1ab053bc82
 MISC metadata.xml 351 RMD160 4401cf2e2c9cc9f166bdff78a1e15612e784ad1d SHA1 dc6b0946171dda265a9b13871899a9a8e071f6db SHA256 f2a98defe794e66d32ba0f9041a7b0afb7209345974f114ee2b8454dbe4bc6e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa9EtQCgrH+85NAcmi+m/l+PeOd3gHiH
-mUgAn2pC3dtc3dMkLiKE31WZeUh6IKOl
-=YAWG
+iEYEARECAAYFAkl9xaEACgkQKhnDs22gwa9dhACcCAIEEp/lOH0iD3ZKgPhac9U7
+t78AniUlOXcK4GQtpSnjzxFnDmoX+jGC
+=+OeW
 -----END PGP SIGNATURE-----
